<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:fillViewport="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/etSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_12dp"
            android:layout_marginTop="@dimen/dimens_12dp"
            android:layout_marginRight="@dimen/dimens_12dp"
            android:background="@drawable/bg_form_round"
            android:paddingLeft="@dimen/dimens_24dp"
            android:paddingTop="@dimen/dimens_12dp"
            android:paddingRight="@dimen/dimens_24dp"
            android:paddingBottom="@dimen/dimens_12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:text="@string/search"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_search" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Leagues -->
        <TextView
            android:id="@+id/textLeaguesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_24dp"
            android:layout_marginTop="@dimen/dimens_16dp"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/leagues"
            android:textColor="@color/fontPrimary"
            android:textSize="@dimen/size_24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSearch" />

        <TextView
            android:id="@+id/textSeeAllLeagues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimens_24dp"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"
            android:text="@string/see_all"
            android:textColor="@color/colorAccent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/textLeaguesLabel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textLeaguesLabel" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerLeagues"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_12dp"
            android:clipToPadding="false"
            android:paddingEnd="@dimen/dimens_12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLeaguesLabel"
            tools:ignore="RtlSymmetry" />

        <!-- Recent Matches -->
        <TextView
            android:id="@+id/textRecentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_24dp"
            android:layout_marginTop="@dimen/dimens_16dp"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/recent_matches"
            android:textColor="@color/fontPrimary"
            android:textSize="@dimen/size_24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerLeagues" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerRecent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_12dp"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:paddingEnd="@dimen/dimens_12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textRecentLabel"
            tools:ignore="RtlSymmetry" />


        <!-- Upcoming Matches -->
        <TextView
            android:id="@+id/textUpMatchesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_24dp"
            android:layout_marginTop="@dimen/dimens_24dp"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/upcoming_matches"
            android:textColor="@color/fontPrimary"
            android:textSize="@dimen/size_24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerRecent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimens_24dp"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"
            android:text="@string/see_all"
            android:textColor="@color/colorAccent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/textUpMatchesLabel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textUpMatchesLabel" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerUpMatches"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_12dp"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textUpMatchesLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>